--- a/custom_components/mattermost/manifest.json
+++ b/custom_components/mattermost/manifest.json
@@ -5,7 +5,7 @@
   "config_flow": true,
   "documentation": "https://github.com/zacs/ha-mattermost",
   "integration_type": "service",
-  "iot_class": "cloud_push",
+  "iot_class": "local_push",
   "requirements": ["mattermostdriver>=7.3.2"],
   "version": "1.0.0"
 }
