--- a/custom_components/mattermost/manifest.json
+++ b/custom_components/mattermost/manifest.json
@@ -6,6 +6,6 @@
   "documentation": "https://github.com/zacs/ha-mattermost",
   "integration_type": "service",
   "iot_class": "local_push",
-  "requirements": ["mattermostdriver>=7.3.2"],
+  "requirements": [],
   "version": "1.0.0"
 }
