--- a/custom_components/mattermost/manifest.json
+++ b/custom_components/mattermost/manifest.json
@@ -4,6 +4,7 @@
   "codeowners": ["@zacs"],
   "config_flow": true,
   "documentation": "https://github.com/zacs/ha-mattermost",
+  "issue_tracker": "https://github.com/zacs/ha-mattermost/issues",
   "integration_type": "service",
   "iot_class": "local_push",
   "requirements": [],
